--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cloud_firestore: ^4.4.5
   firebase_auth: ^4.2.2
   provider: ^6.0.5
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
